responsivness should be fixed added toolbar and added dialog but still not working

--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
     <!--<script src="hammer.js"></script>-->
     <!--<script src="touch-emulator.js"></script>-->
     <!--<script>-->
-        <!--TouchEmulator();-->
+    <!--TouchEmulator();-->
     <!--</script>-->
     <!--<script src="http://cdn.rawgit.com/hammerjs/touchemulator/master/touch-emulator.js"></script>-->
 </head>
 
 <body>
-    <app-root>Loading...</app-root>
+    <app-root><img class="loader" src="https://s3.amazonaws.com/frt-prod/cms/files/files/000/000/069/original/Mario_Pixeles.png" /></app-root>
 </body>
 
 </html>
